--- a/app/src/main/res/layout/content_item_detail.xml
+++ b/app/src/main/res/layout/content_item_detail.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/cell_detail_view"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@android:color/white"
+    android:orientation="vertical"
 
     >
 
     <TextView
-        android:layout_width="match_parent"
         android:id="@+id/tvDate"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:gravity="center"
@@ -32,13 +32,13 @@
             android:layout_height="96dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:srcCompat="@drawable/ic_hand"
             android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_hand" />
 
         <TextView
             android:id="@+id/tvDetailTitle"
@@ -82,11 +82,26 @@
         android:layout_height="0.5dp"
         android:background="@color/colorPrimary" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:padding="8dp"
-        android:background="#00000000"
-        app:srcCompat="@drawable/ic_delete" />
+        android:background="@color/colorAccent"
+        android:orientation="vertical">
+
+        <com.joanzapata.iconify.widget.IconTextView
+            android:id="@+id/iv_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="8dp"
+            android:gravity="center"
+            android:shadowColor="#22000000"
+            android:shadowDx="3"
+            android:shadowDy="3"
+            android:shadowRadius="1"
+            android:text="@string/fa_trash"
+            android:textColor="@color/white"
+            android:textSize="27sp" />
+    </LinearLayout>
+
 </LinearLayout>
