--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -52,7 +52,7 @@
 
                 <TextView
                     android:id="@+id/tvDay"
-                    android:layout_width="wrap_content"
+                    android:layout_width="72dp"
                     android:layout_height="56dp"
                     android:background="@color/colorAccent"
                     android:gravity="center"
@@ -61,7 +61,6 @@
                     android:textColor="@android:color/white" />
 
                 <TextView
-
                     android:layout_width="wrap_content"
                     android:layout_height="56dp"
                     android:background="@color/colorBgDay"
